--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Thiago Gobbi | Portfolio" />
+    <meta property="og:description" content="Flutter | React | Next.js Developer | Porfolio" />
+    <meta property="og:image" content="https://thiagogobbi.vercel.app/preview.png" />
+    <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
