--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Sora:wght@400;500;600;700;800&display=swap"
     />
-    <title>LoFi Portfolio</title>
+    <title>Thiago Gobbi | Porfolio</title>
   </head>
   <body>
     <div id="root"></div>
